--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native": "^0.73.2",
+    "react-native-web": "^0.19.10",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "request": "^2.88.2",
     "web-vitals": "^2.1.4"
+
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "3.2.4"
   }
+  
 }
